
Deferred Whishlist:
---------------------
* icons for SuRuns context menu entries
* Intercept CreateProcessAsUser in services and check for programs started 
  with limited rights that need to be started as admin

------------------------------------------------------------------------------
SuRun Changes:
------------------------------------------------------------------------------
SuRun 1.2.1.1b2 - 2012-11-12
----------------------------
* FIX: Implemented Q&D fix to hook Windows 8 "api-ms-win-*-l1-1-1" DLLs
* FIX: Changed permissions of started Apps (SetAdminDenyUserAccess) for 
       Windows 7 Jumplist compatibility
* FIX: ShellExecuteHook asked to start file.exe when file.exe.ext was run
* FIX: User Bitmap Display on confirmation and runas dialogs did not show
* FIX: Long command lines were not displayed ok on confirmation dialogs


SuRun 1.2.1.0 - 2011-12-30
--------------------------
* NEW: French resources by Laurent Hilsz. Thanks!
* NEW: Portuguese language resources by "the.magic.silver.bullet" Thanks!
* NEW: Command "SuRun: Empty recycle bin" in Recycle Bin context menu
* NEW: In Vista and Win7 SuRun's system menu and context menu entries show 
       a SuRun Shield icon
* NEW: /USER <name> command line parameter for specifying the RunAs user
* NEW: /LOW command line parameter to force launching processes non elevated
       /LOW you can even start programs that UAC would not allow to be 
       run low (E.g. Regedit.exe)
* NEW: User SYSTEM is supported for /RUNAS, but only when used by a non
       restricted SuRunner or by a real Administrator
* NEW: InstallSurun and SuRun set DEP permanently ON
* NEW: SuRun's binaries are flagged to use ASLR
* NEW: SuRun's /RunAs has a new "Run elevated" Checkbox for non restricted 
       SuRunners and Administrators
* NEW: The display time for the "program was started automagically message" 
       can be set
* CHG: Removed dependencies on wtsapi32.h and wtsapi32.lib